continue working on server